--- a/src/features/shareOffer/components/ShareOfferContainer/ShareOfferContainer.module.scss
+++ b/src/features/shareOffer/components/ShareOfferContainer/ShareOfferContainer.module.scss
@@ -22,13 +22,13 @@
   display: flex;
   gap: 8px;
 
-  @include medium-mobile-down {
+  @include mobile-down {
     flex-direction: column;
     width: 100%;
     align-items: flex-start;
   }
 
-  @include medium-mobile-up {
+  @include mobile-up {
     flex-direction: row;
     align-items: center;
   }
@@ -38,11 +38,11 @@
   font-weight: 400;
   color: $base-black;
 
-  @include medium-mobile-down {
+  @include mobile-down {
     font-size: 18px;
   }
 
-  @include medium-mobile-up {
+  @include mobile-up {
     font-size: 24px;
   }
 }
