--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,6 +5,7 @@
 @import './common/typo.scss';
 @import './common/variables.scss';
 @import './reset.scss';
+@import './theme.scss';
 
 :root {
   --app-height: 100%;
