--- a/src/features/acceptOffer/components/RateContainer/RateContainer.module.scss
+++ b/src/features/acceptOffer/components/RateContainer/RateContainer.module.scss
@@ -10,6 +10,8 @@
   justify-content: center;
   align-items: flex-start;
 
+  width: max-content;
+
   border-radius: $s;
   border: 2px solid $base-black;
 }
