--- a/src/features/acceptOffer/components/TokenEntity/TokenEntity.module.scss
+++ b/src/features/acceptOffer/components/TokenEntity/TokenEntity.module.scss
@@ -1,5 +1,6 @@
 @import '@common/colors';
 @import '@common/variables';
+@import '@common/breakpoints';
 
 .tokenWrapper {
   display: flex;
@@ -9,8 +10,15 @@
 }
 
 .logo {
-  width: 48px;
-  height: 48px;
+  @include mobile-up {
+    width: 48px;
+    height: 48px;
+  }
+
+  @include mobile-down {
+    width: 32px;
+    height: 32px;
+  }
 }
 
 .tokenContainer {
