--- a/src/features/acceptOffer/components/TokensContainer/TokensContainer.module.scss
+++ b/src/features/acceptOffer/components/TokensContainer/TokensContainer.module.scss
@@ -1,16 +1,27 @@
 @import '@common/colors';
 @import '@common/variables';
+@import '@common/breakpoints';
 
 .offerWrapper {
   width: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+
+  @include mobile-up {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  @include mobile-down {
+    flex-direction: column;
+    justify-content: center;
+    gap: $m;
+  }
 }
 
 .arrowContainer {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   align-items: center;
   gap: $m;
