--- a/src/features/acceptOffer/view.module.scss
+++ b/src/features/acceptOffer/view.module.scss
@@ -1,18 +1,33 @@
 @import '@common/colors.scss';
 @import '@common/variables.scss';
+@import '@common/breakpoints.scss';
 
 .container {
   width: 100%;
   display: flex;
-  padding: $xxl $lg;
   flex-direction: column;
   align-items: flex-start;
-  gap: $lg;
 
   border-top: 2px solid #f5f5f5;
   border-bottom: 2px solid #f5f5f5;
+
+  @include mobile-up {
+    gap: $lg;
+    padding: $xxl $lg;
+  }
+
+  @include mobile-down {
+    gap: $m;
+    padding: $m;
+  }
 }
 
 .paddingLg {
-  padding: $lg;
+  @include mobile-up {
+    padding: $lg;
+  }
+
+  @include mobile-down {
+    padding: $m;
+  }
 }
