--- a/src/features/cancelOffer/components/CancelInfo/CancelInfo.module.scss
+++ b/src/features/cancelOffer/components/CancelInfo/CancelInfo.module.scss
@@ -1,26 +1,38 @@
 @import '@common/colors.scss';
 @import '@common/variables.scss';
+@import '@common/typo.scss';
+@import '@common/breakpoints.scss';
 
 .container {
   width: 100%;
   display: flex;
-  padding: $xxl $lg;
   flex-direction: column;
   align-items: flex-start;
-  gap: $lg;
 
   border-top: 2px solid #F5F5F5;
   border-bottom: 2px solid #F5F5F5;
+
+  @include mobile-up {
+    gap: $lg;
+    padding: $xxl $lg;
+  }
+
+  @include mobile-down {
+    gap: $m;
+    padding: $m;
+  }
 }
 
 .text {
-  font-size: 14px;
   color: $base-black;
   font-weight: 400;
+
+  @include font-m;
 }
 
 .bold {
-  font-size: 14px;
   color: $base-black;
   font-weight: 700;
+
+  @include font-m;
 }
