--- a/src/styles/common/typo.scss
+++ b/src/styles/common/typo.scss
@@ -1,4 +1,9 @@
 // Миксины для размеров текста
+@mixin font-xxs {
+  font-size: 8px;
+  line-height: 12px;
+}
+
 @mixin font-xs {
   font-size: 10px;
   line-height: 14px;
