--- a/src/features/acceptOffer/components/AcceptedOffer/AcceptedOffer.module.scss
+++ b/src/features/acceptOffer/components/AcceptedOffer/AcceptedOffer.module.scss
@@ -1,4 +1,3 @@
-@import '@common/colors.scss';
 @import '@common/variables.scss';
 
 .wrapper {
@@ -25,7 +24,7 @@
 }
 
 .label {
-  color: $base-black;
+  color: var(--base-black);
   font-size: 24px;
   font-weight: 400;
 }
@@ -37,11 +36,11 @@
   align-items: center;
   gap: $s;
   border-radius: $s;
-  background: $bg-gray;
+  background: var(--bg-gray);
 }
 
 .shareLabel {
-  color: $base-black;
+  color: var(--base-black);
   font-size: 14px;
   font-weight: 400;
 }
@@ -56,7 +55,7 @@
   align-items: center;
 
   font-size: 14px;
-  color: $base-white;
+  color: var(--base-white);
   font-weight: 600;
 
   border-radius: $xxs;
