--- a/src/features/acceptOffer/components/ReceiverContainer/ReceiverContainer.module.scss
+++ b/src/features/acceptOffer/components/ReceiverContainer/ReceiverContainer.module.scss
@@ -1,4 +1,3 @@
-@import '@common/colors';
 @import '@common/variables';
 @import '@common/typo.scss';
 @import '@common/breakpoints';
@@ -26,7 +25,7 @@
 }
 
 .receiverAddress {
-  color: $base-black;
+  color: var(--base-black);
   font-weight: 400;
 
   @include mobile-up {
@@ -39,7 +38,7 @@
 }
 
 .receiver {
-  color: $base-black;
+  color: var(--base-black);
   font-weight: 400;
   opacity: 0.5;
 
