--- a/src/features/acceptOffer/components/TokenWarning/TokenWarning.module.scss
+++ b/src/features/acceptOffer/components/TokenWarning/TokenWarning.module.scss
@@ -1,4 +1,3 @@
-@import '@common/colors';
 @import '@common/variables';
 @import '@common/typo.scss';
 @import '@common/breakpoints';
@@ -6,7 +5,7 @@
 .warnContainer {
   padding: $s;
   border-radius: $s;
-  background: $additional-warn;
+  background: var(--additional-warn);
 
   @include mobile-up {
     display: flex;
@@ -49,7 +48,7 @@
 }
 
 .warnText {
-  color: $base-black;
+  color: var(--base-black);
   font-weight: 400;
 
   @include font-m;
@@ -61,14 +60,14 @@
 }
 
 .warnTokenSymbol {
-  color: $base-black;
+  color: var(--base-black);
   font-weight: 700;
 
   @include font-m;
 }
 
 .warnTokenName {
-  color: $base-black;
+  color: var(--base-black);
   font-weight: 700;
 
   @include mobile-up {
