--- a/src/features/cancelOffer/components/CancelInfo/CancelInfo.module.scss
+++ b/src/features/cancelOffer/components/CancelInfo/CancelInfo.module.scss
@@ -1,4 +1,3 @@
-@import '@common/colors.scss';
 @import '@common/variables.scss';
 @import '@common/typo.scss';
 @import '@common/breakpoints.scss';
@@ -24,14 +23,14 @@
 }
 
 .text {
-  color: $base-black;
+  color: var(--base-black);
   font-weight: 400;
 
   @include font-m;
 }
 
 .bold {
-  color: $base-black;
+  color: var(--base-black);
   font-weight: 700;
 
   @include font-m;
