--- a/src/features/createOffer/components/AddCustomToken/AddCustomToken.module.scss
+++ b/src/features/createOffer/components/AddCustomToken/AddCustomToken.module.scss
@@ -1,9 +1,7 @@
-@import '@common/colors.scss';
-
 .label {
   font-weight: 400;
   font-size: 14px;
-  color: $base-black;
+  color: var(--base-black);
   cursor: pointer;
   opacity: 0.5;
 }
