--- a/src/features/createOffer/components/AddTokenPopup/AddTokenPopup.module.scss
+++ b/src/features/createOffer/components/AddTokenPopup/AddTokenPopup.module.scss
@@ -1,4 +1,3 @@
-@import '@common/colors.scss';
 @import '@common/variables.scss';
 @import '@common/typo.scss';
 @import '@common/mixins.scss';
@@ -18,7 +17,7 @@
   width: 100%;
   max-width: 540px;
   min-height: 548px;
-  background: $base-white;
+  background: var(--base-white);
   padding: $m $lg;
   border: none;
   border-radius: $s;
@@ -55,11 +54,11 @@
 }
 
 .cross path {
-  stroke: $base-black;
+  stroke: var(--base-black);
 }
 
 .title {
-  color: $base-black;
+  color: var(--base-black);
 
   @include mobile-down {
     font-size: 18px;
@@ -79,7 +78,7 @@
   flex-direction: row;
   align-items: center;
   padding: $m $s;
-  background: $additional-warn;
+  background: var(--additional-warn);
   border-radius: $s;
   gap: $s;
 }
@@ -101,7 +100,7 @@
 }
 
 .warnText {
-  color: $base-black;
+  color: var(--base-black);
   font-size: 14px;
   line-height: normal;
 }
@@ -136,14 +135,14 @@
 
 .tokenTitle {
   font-weight: 400;
-  color: $base-black;
+  color: var(--base-black);
   font-size: 24px;
 }
 
 .tokenBalance {
   font-weight: 400;
   font-size: 14px;
-  color: $base-black;
+  color: var(--base-black);
   opacity: 0.5;
 }
 
