--- a/src/features/createOffer/components/CreateOfferFrom/CreateOfferFrom.module.scss
+++ b/src/features/createOffer/components/CreateOfferFrom/CreateOfferFrom.module.scss
@@ -1,5 +1,4 @@
 @import '@common/variables.scss';
-@import '@common/colors.scss';
 @import '@common/typo.scss';
 @import '@common/breakpoints.scss';
 
@@ -10,7 +9,7 @@
   width: 100%;
   height: 100%;
   padding: $lg $m;
-  background: $base-white;
+  background: var(--base-white);
   gap: $lg;
 }
 
@@ -23,7 +22,7 @@
 }
 
 .selectLabel {
-  color: $base-black;
+  color: var(--base-black);
 
   @include mobile-up {
     font-size: 24px;
@@ -71,7 +70,7 @@
 
 .amountText {
   font-size: 14px;
-  color: $base-black;
+  color: var(--base-black);
   font-weight: 600;
   line-height: normal;
 }
@@ -86,7 +85,7 @@
   gap: $s;
 
   border-radius: $s;
-  background: $bg-gray;
+  background: var(--bg-gray);
 
   &:disabled {
     cursor: not-allowed;
@@ -104,7 +103,7 @@
 .balanceLabel {
   font-size: 12px;
   line-height: normal;
-  color: $base-black;
+  color: var(--base-black);
   font-weight: 600;
 }
 
@@ -112,6 +111,6 @@
   max-width: 115px;
   word-break: break-word;
   font-size: 12px;
-  color: $base-black;
+  color: var(--base-black);
   font-weight: 400;
 }
