--- a/src/features/createOffer/components/OfferButtons/OfferButtons.module.scss
+++ b/src/features/createOffer/components/OfferButtons/OfferButtons.module.scss
@@ -1,5 +1,4 @@
 @import '@common/variables.scss';
-@import '@common/colors.scss';
 @import '@common/typo.scss';
 
 @mixin buttons-container {
@@ -8,7 +7,7 @@
   align-items: flex-start;
   width: 100%;
   padding: $m $lg;
-  background: $base-white;
+  background: var(--base-white);
   gap: $m;
   border-bottom-right-radius: $s;
   border-bottom-left-radius: $s;
@@ -25,14 +24,14 @@
 }
 
 .label {
-  color: $base-black;
+  color: var(--base-black);
   line-height: normal;
   font-size: 14px;
   font-weight: 400;
 }
 
 .terms {
-  color: $base-black;
+  color: var(--base-black);
   opacity: 0.5;
   line-height: normal;
   font-size: 12px;
