--- a/src/features/createOffer/components/ProgressOfferBar/ProgressOfferBar.module.scss
+++ b/src/features/createOffer/components/ProgressOfferBar/ProgressOfferBar.module.scss
@@ -1,5 +1,4 @@
 @import '@common/variables.scss';
-@import '@common/colors.scss';
 @import '@common/typo.scss';
 @import '@common/breakpoints.scss';
 
@@ -26,7 +25,7 @@
   bottom: 27%;
   width: 100%;
   height: 2px;
-  background-color: $additional-gray-pre-middle;
+  background-color: var(--additional-gray-pre-middle);
   transform: translateY(50%);
 }
 
@@ -41,9 +40,9 @@
   font-weight: 700;
   font-size: 14px;
   line-height: normal;
-  color: $additional-gray-pre-middle;
-  background-color: $base-white;
-  border: 2px solid $additional-gray-pre-middle;
+  color: var(--additional-gray-pre-middle);
+  background-color: var(--base-white);
+  border: 2px solid var(--additional-gray-pre-middle);
   border-radius: 9999px;
 }
 
@@ -66,18 +65,18 @@
 }
 
 .active .step {
-  color: $base-white;
-  background-color: $base-black;
+  color: var(--base-white);
+  background-color: var(--base-black);
   border: none;
 }
 
 .active::before,
 .complete::before {
-  background-color: $base-gray;
+  background-color: var(--base-gray);
 }
 
 .complete .step {
-  color: $base-white;
-  background-color: $base-black;
+  color: var(--base-white);
+  background-color: var(--base-black);
   border: none;
 }
