--- a/src/features/createOffer/components/SelectTokenPopup/SelectTokenPopup.module.scss
+++ b/src/features/createOffer/components/SelectTokenPopup/SelectTokenPopup.module.scss
@@ -1,4 +1,3 @@
-@import '@common/colors.scss';
 @import '@common/variables.scss';
 @import '@common/typo.scss';
 @import '@common/mixins.scss';
@@ -17,8 +16,8 @@
   flex-direction: column;
   width: 100%;
   max-width: 370px;
-  background: $base-white;
-  border: 1px solid $additional-gray-pre-middle;
+  background: var(--base-white);
+  border: 1px solid var(--additional-gray-pre-middle);
   border-radius: $xxs;
   box-shadow: 0 0 25px 0 rgb(0 0 0 / 15%);
 
@@ -40,20 +39,20 @@
 }
 
 .cross path {
-  stroke: $base-black;
+  stroke: var(--base-black);
 }
 
 .title {
   font-weight: 700;
   font-size: 14px;
-  color: $base-black;
+  color: var(--base-black);
 }
 
 .header {
   display: flex;
   flex-direction: column;
   padding: $lg;
-  background: $bg-gray;
+  background: var(--bg-gray);
   border-top-left-radius: $xxs;
   border-top-right-radius: $xxs;
   gap: $m;
@@ -91,6 +90,6 @@
   transition: all 100ms ease-in-out;
 
   &:hover {
-    background: $bg-gray;
+    background: var(--bg-gray);
   }
 }
