--- a/src/features/shareOffer/components/ShareOfferContainer/ShareOfferContainer.module.scss
+++ b/src/features/shareOffer/components/ShareOfferContainer/ShareOfferContainer.module.scss
@@ -1,4 +1,3 @@
-@import '@common/colors.scss';
 @import '@common/variables.scss';
 @import '@common/breakpoints.scss';
 
@@ -6,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  background: $base-white;
+  background: var(--base-white);
   border-radius: 10px;
   gap: $s;
 
@@ -22,7 +21,7 @@
 .title {
   font-weight: 700;
   font-size: 14px;
-  color: $base-black;
+  color: var(--base-black);
 }
 
 .container {
@@ -43,7 +42,7 @@
 
 .link {
   font-weight: 400;
-  color: $base-black;
+  color: var(--base-black);
 
   @include mobile-down {
     font-size: 18px;
