--- a/src/modules/CancelOfferTemplate/CancelOfferTemplate.module.scss
+++ b/src/modules/CancelOfferTemplate/CancelOfferTemplate.module.scss
@@ -1,4 +1,3 @@
-@import '@common/colors.scss';
 @import '@common/variables.scss';
 @import '@common/breakpoints.scss';
 
@@ -16,7 +15,7 @@
   max-width: 600px;
   height: max-content;
   margin: 0 auto;
-  background: $base-white;
+  background: var(--base-white);
   border-radius: $s;
   box-shadow: 0 0 20px 0 rgb(0 0 0 / 5%);
 
@@ -38,5 +37,5 @@
 .label {
   font-weight: 600;
   font-size: 14px;
-  color: $base-black;
+  color: var(--base-black);
 }
