--- a/src/shared/components/ConnectWallet/ConnectWallet.module.scss
+++ b/src/shared/components/ConnectWallet/ConnectWallet.module.scss
@@ -1,4 +1,3 @@
-@import '@common/colors.scss';
 @import '@common/variables.scss';
 @import '@common/breakpoints.scss';
 @import '@common/typo.scss';
@@ -16,8 +15,8 @@
   @include mobile-up {
     padding: $xxs;
     gap: $m;
-    background: $base-white;
-    border: 1px solid $bg-gray;
+    background: var(--base-white);
+    border: 1px solid var(--bg-gray);
 
     @include font-l;
   }
@@ -25,7 +24,7 @@
   @include mobile-down {
     gap: $sm;
     padding: $xs $m;
-    background: $bg-gray;
+    background: var(--bg-gray);
 
     @include font-m;
   }
@@ -58,7 +57,7 @@
 
   @include mobile-up {
     padding: $xxs $s;
-    background: $bg-gray;
+    background: var(--bg-gray);
     border-radius: $xxs;
     gap: $s;
   }
@@ -71,7 +70,7 @@
 .walletLabel {
   font-weight: 400;
   font-size: 14px;
-  color: $base-black;
+  color: var(--base-black);
 }
 
 .balance {
