--- a/src/shared/components/NotFoundMessage/NotFoundMessage.module.scss
+++ b/src/shared/components/NotFoundMessage/NotFoundMessage.module.scss
@@ -1,4 +1,3 @@
-@import '@common/colors.scss';
 @import '@common/variables.scss';
 @import '@common/typo.scss';
 @import '@common/breakpoints.scss';
@@ -21,7 +20,7 @@
 }
 
 .title {
-  color: $base-black;
+  color: var(--base-black);
   font-weight: 400;
 
   @include mobile-up {
@@ -34,7 +33,7 @@
 }
 
 .text {
-  color: $base-black;
+  color: var(--base-black);
   font-weight: 400;
   text-align: center;
 
