--- a/src/shared/ui-kit/Switch/Switch.module.scss
+++ b/src/shared/ui-kit/Switch/Switch.module.scss
@@ -1,4 +1,3 @@
-@import '@common/colors.scss';
 @import '@common/variables.scss';
 
 .wrapper {
@@ -12,7 +11,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: normal;
-  color: $base-black;
+  color: var(--base-black);
   font-style: normal;
 }
 
@@ -20,7 +19,7 @@
   position: relative;
   width: $xl;
   height: $m;
-  background-color: $additional-gray-middle;
+  background-color: var(--additional-gray-middle);
   border: none;
   border-radius: 50px;
   cursor: pointer;
@@ -32,14 +31,14 @@
     left: 0;
     width: 16px;
     height: 16px;
-    background-color: $additional-gray-pre-middle;
+    background-color: var(--additional-gray-pre-middle);
     border-radius: 999px;
     transform: translate(0, -50%);
     transition: transform 0.2s;
   }
 
   &[data-state='checked'] .thumb {
-    background-color: $additional-gray-dark;
+    background-color: var(--additional-gray-dark);
     transform: translate(15px, -50%);
   }
 }
