fixed variable in button, accepted offer

--- a/src/shared/ui-kit/Button/Button.module.scss
+++ b/src/shared/ui-kit/Button/Button.module.scss
@@ -11,7 +11,7 @@
   font-size: 14px;
   line-height: normal;
   font-family: inherit;
-  color: $base-white;
+  color: var(--base-white);
   border: none;
   border-radius: $xxs;
   cursor: pointer;
